10-Configure-Common-Egress/solution/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: google-apis-gw
  namespace: istio-system
spec:
  selector:
    app: istio-egressgateway
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls
      protocol: TLS
    hosts:
    - "isito-system/*.googleapis.com"
    tls:
      mode: PASSTHROUGH
