10-Configure-Common-Egress/solution/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: google-apis-dst
  namespace: istio-system
spec:
  exportTo:
  - '*'
  host: istio-egressgateway.demo-egress.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
  subsets:
  - name: googleapis-passthrough
