10-Configure-Common-Egress/solution/serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: google-apis-se
  namespace: istio-system
spec:
  hosts:
  - "*.googleapis.com"
  endpoints:
   - address: "apis.googleapis.com"
  ports:
  - name: tls
    number: 443
    protocol: TLS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
  - "*"
